--- a/armor.html
+++ b/armor.html
@@ -162,7 +162,7 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-deepred">VX-Tac Vest MkII</h4>
+                        <h4 class="mb-3" style="color: #b30000;">VX-Tac Vest MkII</h4>
                         <p>High-density Kevlar weave, modular pouch system, and reinforced ceramic trauma plates.</p>
                         <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalVest">Browse Images</button>
                     </div>
@@ -194,7 +194,7 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-deepred">RD-09 Riot Frame</h4>
+                        <h4 class="mb-3" style="color: #b30000;">RD-09 Riot Frame</h4>
                         <p>Full-body impact armor with kinetic dampeners, visor HUD, and reinforced forearm guards.</p>
                         <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalRiot">Browse Images</button>
                     </div>
@@ -226,7 +226,7 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-deepred">RLS-3 Ghost Skin</h4>
+                        <h4 class="mb-3" style="color: #b30000;">RLS-3 Ghost Skin</h4>
                         <p>Ultra-light stealth armor with reactive camo coating, sensor jammers, and thermal damping.</p>
                         <button type="button" class="btn btn-outline-deepred mt-3" data-bs-toggle="modal" data-bs-target="#modalRecon">Browse Images</button>
                     </div>
@@ -378,7 +378,7 @@
     <!-- Armor Unit Lineup -->
     <section id="armor-units" class="py-5 text-white">
         <div class="container">
-            <h2 class="mb-5 text-center section-title" style="color: #b30000;">🛡️ Tactical Body Armor Line</h2>
+            <h2 class="text-center mb-5 section-title glow-deepred">🛡️ Tactical Body Armor Line</h2>
             <div class="row text-center g-4 justify-content-center">
 
             <!-- MK-I Cuirass Core -->
@@ -415,7 +415,7 @@
     <!-- Armor Logs Section -->
     <section id="armor-logs" class="container py-5">
         <div class="container">
-            <h2 class="text-center mb-5 section-title" style="color: #b30000;">📓 Armor Log Reports</h2>
+            <h2 class="text-center mb-5 section-title glow-deepred">📓 Armor Log Reports</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
             <!-- MK-I Log -->
@@ -464,7 +464,7 @@
     <!-- Command Feedback Panel -->
     <section id="armor-command" class="py-5 bg-black text-white">
         <div class="container">
-            <h2 class="text-center mb-5 section-title" style="color: #b30000;">🧬 Combat Operator Feedback</h2>
+            <h2 class="text-center mb-5 section-title glow-deepred">🧬 Combat Operator Feedback</h2>
             <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="border rounded p-4 shadow bg-dark">
@@ -526,7 +526,7 @@
     <!-- Armor Simulation Logs -->
     <section id="armor-sims" class="py-5 bg-black text-white">
         <div class="container">
-            <h2 class="text-center mb-5 section-title" style="color: #b30000;">🎯 Defense Sim Archives</h2>
+            <h2 class="text-center mb-5 section-title glow-deepred">🎯 Defense Sim Archives</h2>
             <div class="row row-cols-1 row-cols-md-2 g-4">
 
             <div class="col">
