--- a/drones.html
+++ b/drones.html
@@ -179,7 +179,7 @@
                             <img src="images/Drones/SL01_Falcon_3.jpg" alt="Falcon Image 3" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
-                            <p class="text-muted">Click images to view in large mode</p>
+                            <p>Click images to view in large mode</p>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                             <img src="images/Drones/SL02_Hunter_3.jpg" alt="Hunter Image 3" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
-                            <p class="text-muted">Click images to view in large mode</p>
+                            <p>Click images to view in large mode</p>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                             <img src="images/Drones/SL03_Vulture_3.jpg" alt="Vulture Image 3" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
-                            <p class="text-muted">Click images to view in large mode</p>
+                            <p>Click images to view in large mode</p>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -252,7 +252,7 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-violet">SL-04 “Viper”</h4>
+                        <h4 class="mb-3" style="color: #8e44ad;">SL-04 “Viper”</h4>
                         <p>Stealth operations drone with noise suppression and cloaking capabilities. Optimal for infiltration, signal tracing, and stealth delivery.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalViper">Browse Images</button>
                     </div>
@@ -273,7 +273,7 @@
                             <img src="images/Drones/SL04_Viper_3.jpg" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
-                            <p class="text-muted">Click images to view in large mode</p>
+                            <p>Click images to view in large mode</p>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -284,7 +284,7 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-violet">SL-05 “Raven”</h4>
+                        <h4 class="mb-3" style="color: #8e44ad;">SL-05 “Raven”</h4>
                         <p>Multi-terrain drone with both aerial and ground mobility. Designed for recon, relay missions, and low-altitude intelligence collection.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalRaven">Browse Images</button>
                     </div>
@@ -305,7 +305,7 @@
                             <img src="images/Drones/SL05_Raven_3.jpg" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
-                            <p class="text-muted">Click images to view in large mode</p>
+                            <p>Click images to view in large mode</p>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -316,7 +316,7 @@
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
                     <div class="card-body p-4">
-                        <h4 class="mb-3 text-violet">SL-07 “Phantom Vortex”</h4>
+                        <h4 class="mb-3" style="color: #8e44ad;">SL-07 “Phantom Vortex”</h4>
                         <p>Experimental drone with magnetic levitation and zero-emission propulsion. Developed for high-speed, silent reconnaissance and disruption ops.</p>
                         <button type="button" class="btn btn-outline-violet mt-3" data-bs-toggle="modal" data-bs-target="#modalPhantom">Browse Images</button>
                     </div>
@@ -337,7 +337,7 @@
                             <img src="images/Drones/SL07_Phantom_3.jpg" class="img-fluid rounded modal-image" />
                         </div>
                         <div class="modal-footer">
-                            <p class="text-muted">Click images to view in large mode</p>
+                            <p>Click images to view in large mode</p>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -538,11 +538,11 @@
 
                 <!-- SL-01 Falcon Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Falcon sweep concluded. Two anomalies flagged. Uploading thermal overlay to central core."</p>
-                            <footer class="blockquote-footer text-light">SL-01 Falcon <cite class="text-muted">[04:05 UTC]</cite></footer>
+                            <footer class="blockquote-footer">SL-01 Falcon <cite>[04:05 UTC]</cite></footer>
                             </blockquote>
                             <div class="text-info">🛰️ Status: Surveillance Complete</div>
                         </div>
@@ -551,11 +551,11 @@
 
                 <!-- SL-02 Hunter Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Target locked. Velocity sync engaged. Intercept in 4... 3... 2... —contact."</p>
-                            <footer class="blockquote-footer text-light">SL-02 Hunter <cite class="text-muted">[03:41 UTC]</cite></footer>
+                            <footer class="blockquote-footer">SL-02 Hunter <cite>[03:41 UTC]</cite></footer>
                             </blockquote>
                             <div class="text-primary">🎯 Status: Target Acquired</div>
                         </div>
@@ -564,11 +564,11 @@
 
                 <!-- SL-03 Vulture Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"EMP charge deployed. All hostile electronics offline. Switching to RTB protocol."</p>
-                            <footer class="blockquote-footer text-light">SL-03 Vulture <cite class="text-muted">[02:19 UTC]</cite></footer>
+                            <footer class="blockquote-footer">SL-03 Vulture <cite>[02:19 UTC]</cite></footer>
                             </blockquote>
                             <div class="text-warning">⚡ Status: EMP Discharge Logged</div>
                         </div>
@@ -577,11 +577,11 @@
 
                 <!-- SL-04 Viper Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Sweep velocity at 98%. Flare deployed at Zone Theta. Returning to orbit."</p>
-                            <footer class="blockquote-footer text-light">SL-04 Viper <cite class="text-muted">[01:44 UTC]</cite></footer>
+                            <footer class="blockquote-footer">SL-04 Viper <cite>[01:44 UTC]</cite></footer>
                             </blockquote>
                             <div class="text-danger">🚀 Status: Rapid Recon Achieved</div>
                         </div>
@@ -590,11 +590,11 @@
 
                 <!-- SL-05 Raven Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Interior scan complete. Beacon signal deployed. Awaiting next objective."</p>
-                            <footer class="blockquote-footer text-light">SL-05 Raven <cite class="text-muted">[06:02 UTC]</cite></footer>
+                            <footer class="blockquote-footer">SL-05 Raven <cite>[06:02 UTC]</cite></footer>
                             </blockquote>
                             <div class="text-secondary">🕵️ Status: Tactical Marking Executed</div>
                         </div>
@@ -603,11 +603,11 @@
 
                 <!-- SL-07 Phantom Vortex Log -->
                 <div class="col">
-                    <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Velocity breach confirmed. Gyro hold locked. AI telemetry packet sent to core lab."</p>
-                            <footer class="blockquote-footer text-light">SL-07 Phantom Vortex <cite class="text-muted">[05:57 UTC]</cite></footer>
+                            <footer class="blockquote-footer">SL-07 Phantom Vortex <cite>[05:57 UTC]</cite></footer>
                             </blockquote>
                             <div class="text-light">💨 Status: Speed Trial Complete</div>
                         </div>
@@ -619,25 +619,25 @@
     </section>
 
     <!-- Drone Intelligence Matrix -->
-    <section id="drone-ai-matrix" class="py-5 bg-black text-white">
+    <section id="drone-ai-matrix" class="py-5">
         <div class="container">
             <h2 class="mb-5 text-center section-title glow-violet">🔗 AI Network Matrix</h2>
             <div class="row g-4 text-center justify-content-center">
 
                 <div class="col-md-3">
-                    <div class="p-4 border rounded bg-dark shadow-sm">
+                    <div class="p-4 border rounded shadow-sm">
                     <h5 class="fw-bold">Falcon</h5>
                     <p>Feeds topographical data to Raven & Overwatch.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="p-4 border rounded bg-dark shadow-sm">
+                    <div class="p-4 border rounded shadow-sm">
                     <h5 class="fw-bold">Hunter</h5>
                     <p>Receives target data from Viper, executes from shared grid.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="p-4 border rounded bg-dark shadow-sm">
+                    <div class="p-4 border rounded shadow-sm">
                     <h5 class="fw-bold">Phantom Vortex</h5>
                     <p>Processes real-time velocity telemetry for Overwatch AI sync.</p>
                     </div>
@@ -647,14 +647,14 @@
     </section>
 
     <!-- Live Operations Panel -->
-    <section id="live-ops" class="py-5 bg-dark text-white">
+    <section id="live-ops" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5 section-title glow-violet">📡 Command Interface</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="border rounded p-4 shadow bg-black">
-                        <p><strong>Ops Command Log:</strong></p>
-                        <pre class="bg-secondary p-3 rounded text-start text-black">
+                    <div class="border rounded p-4 shadow">
+                        <p class="glow-violet"><strong>Ops Command Log:</strong></p>
+                        <pre class="bg-secondary p-3 rounded text-start glow-teal">
                 [06:01:34] SL-01 Falcon uplink: anomaly pattern detected.
                 [06:01:42] SL-02 Hunter: Target sync request received.
                 [06:01:49] SL-03 Vulture: EMP cooldown ready.
@@ -667,7 +667,7 @@
     </section>
 
     <!-- Drone Specs Grid -->
-    <section id="drone-specs" class="py-5 bg-black text-white">
+    <section id="drone-specs" class="py-5 bg-black">
         <div class="container">
             <h2 class="text-center mb-5 section-title glow-violet">📊 Tactical Comparison Grid</h2>
             <div class="table-responsive">
@@ -717,24 +717,24 @@
     </section>
 
     <!-- War Games Simulation Feed -->
-    <section id="war-games" class="py-5 bg-dark text-white">
+    <section id="war-games" class="py-5 bg-dark">
         <div class="container">
             <h2 class="text-center mb-5 section-title glow-violet">🎮 Simulated Threat Feed</h2>
             <div class="row row-cols-1 row-cols-md-2 g-4">
 
                 <div class="col">
-                    <div class="card bg-black border-0 h-100 shadow-sm p-4">
+                    <div class="card border-0 h-100 shadow-sm p-4">
                     <h5>⚠️ Exercise: RED ZONE</h5>
                     <p>Multiple drones simulated for base breach scenario. Falcon logged early perimeter breach. Raven dispatched successfully for containment.</p>
-                    <p class="text-muted small">Status: 99.1% Response Accuracy</p>
+                    <p>Status: 99.1% Response Accuracy</p>
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card bg-black border-0 h-100 shadow-sm p-4">
+                    <div class="card border-0 h-100 shadow-sm p-4">
                     <h5>🧪 Exercise: GHOST WIND</h5>
                     <p>SL-07 Phantom Vortex tested for max maneuver protocol in wind-tunnel sim. Result: Stability retained at 96.4% during evasive drift cycles.</p>
-                    <p class="text-muted small">Speed Record: 870 km/h</p>
+                    <p>Speed Record: 870 km/h</p>
                     </div>
                 </div>
 
