--- a/vehicles.html
+++ b/vehicles.html
@@ -410,7 +410,7 @@
     <!-- Vehicle Engineering Logs Section -->
     <section id="vehicle-logs" class="container py-5">
         <div class="container">
-            <h2 class="text-center mb-5 section-title" style="color: #e67e22;">🛠️ Custom Build Logs</h2>
+            <h2 class="text-center mb-5 section-title glow-orange">🛠️ Custom Build Logs</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
             <!-- Dune Buggy Log -->
@@ -459,7 +459,7 @@
     <!-- Vehicle Specs Grid -->
     <section id="vehicle-specs" class="py-5 bg-black text-white">
         <div class="container">
-            <h2 class="text-center mb-5 section-title" style="color: #e67e22;">📊 Build Specifications</h2>
+            <h2 class="text-center mb-5 section-title glow-orange">📊 Build Specifications</h2>
             <div class="table-responsive">
             <table class="table table-dark table-striped text-center align-middle">
                 <thead>
@@ -509,7 +509,7 @@
     <!-- Engineering Workshop Feed -->
     <section id="workshop-feed" class="py-5 bg-dark text-white">
         <div class="container">
-            <h2 class="text-center mb-5 section-title" style="color: #e67e22;">🔧 Workshop Live Feed</h2>
+            <h2 class="text-center mb-5 section-title glow-orange">🔧 Workshop Live Feed</h2>
             <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="border rounded p-4 shadow bg-black">
