--- a/armor.html
+++ b/armor.html
@@ -420,11 +420,11 @@
 
             <!-- MK-I Log -->
             <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                <div class="card h-100 shadow-lg border-0 rounded-4">
                 <div class="card-body p-4">
                     <blockquote class="blockquote mb-4">
                     <p>"Impact sustained: 3.2kN. Ceramic deflection successful. User mobility unaffected."</p>
-                    <footer class="blockquote-footer text-light">MK-I Core Unit <cite class="text-muted">[02:17 UTC]</cite></footer>
+                    <footer class="blockquote-footer">MK-I Core Unit <cite>[02:17 UTC]</cite></footer>
                     </blockquote>
                     <div class="text-info">🧪 Status: Field Ready</div>
                 </div>
@@ -433,11 +433,11 @@
 
             <!-- MK-II Log -->
             <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                <div class="card h-100 shadow-lg border-0 rounded-4">
                 <div class="card-body p-4">
                     <blockquote class="blockquote mb-4">
                     <p>"Blast radius 2m. Gel nodes flexed to 84%. Spine and vital zones remain uncompromised."</p>
-                    <footer class="blockquote-footer text-light">MK-II Obsidian <cite class="text-muted">[04:52 UTC]</cite></footer>
+                    <footer class="blockquote-footer">MK-II Obsidian <cite>[04:52 UTC]</cite></footer>
                     </blockquote>
                     <div class="text-warning">💥 Status: Stress-Test Complete</div>
                 </div>
@@ -446,11 +446,11 @@
 
             <!-- MK-III Log -->
             <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                <div class="card h-100 shadow-lg border-0 rounded-4">
                 <div class="card-body p-4">
                     <blockquote class="blockquote mb-4">
                     <p>"Visor thermal mode engaged. EMP pulse deflected. HUD relink achieved in 1.4s."</p>
-                    <footer class="blockquote-footer text-light">MK-III Sentinel <cite class="text-muted">[03:10 UTC]</cite></footer>
+                    <footer class="blockquote-footer">MK-III Sentinel <cite>[03:10 UTC]</cite></footer>
                     </blockquote>
                     <div class="text-success">🧿 Status: Tactical Suite Online</div>
                 </div>
@@ -466,16 +466,16 @@
         <div class="container">
             <h2 class="text-center mb-5 section-title glow-deepred">🧬 Combat Operator Feedback</h2>
             <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="border rounded p-4 shadow bg-dark">
-                <p><strong>Live Ops Log:</strong></p>
-                <pre class="bg-secondary p-3 rounded text-start text-black">
-        [04:03:22] MK-I Cuirass: Ceramic plate registered 97% deflection.
-        [04:04:10] MK-II Obsidian: Kinetic gel compressed and reset.
-        [04:05:45] MK-III Sentinel: HUD recalibrated after jamming event.
-                </pre>
+                <div class="col-lg-8">
+                    <div class="border rounded p-4 shadow">
+                        <p class="glow-violet"><strong>Ops Command Log:</strong></p>
+                        <pre class="bg-secondary p-3 rounded text-start glow-teal">
+            [04:03:22] MK-I Cuirass: Ceramic plate registered 97% deflection.
+            [04:04:10] MK-II Obsidian: Kinetic gel compressed and reset.
+            [04:05:45] MK-III Sentinel: HUD recalibrated after jamming event.
+                        </pre>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </section>
@@ -483,7 +483,7 @@
     <!-- Armor Spec Grid -->
     <section id="armor-specs" class="py-5 bg-dark text-white">
         <div class="container">
-            <h2 class="text-center mb-5 section-title" style="color: #b30000;">📊 Comparative Armor Grid</h2>
+            <h2 class="text-center mb-5 section-title glow-deepred">📊 Comparative Armor Grid</h2>
             <div class="table-responsive">
             <table class="table table-dark table-striped text-center align-middle">
                 <thead>
@@ -524,24 +524,24 @@
     </section>
 
     <!-- Armor Simulation Logs -->
-    <section id="armor-sims" class="py-5 bg-black text-white">
+    <section id="armor-sims" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5 section-title glow-deepred">🎯 Defense Sim Archives</h2>
             <div class="row row-cols-1 row-cols-md-2 g-4">
 
             <div class="col">
-                <div class="card bg-dark border-0 h-100 shadow-sm p-4">
+                <div class="card border-0 h-100 shadow-sm p-4">
                 <h5>🔊 Test Run: SHIELD DOME</h5>
                 <p>MK-II armor placed in simulated riot scenario. Gel matrix performed within 92% of stress tolerance curve.</p>
-                <p class="text-muted small">Evaluation Score: 8.9/10</p>
+                <p>Evaluation Score: 8.9/10</p>
                 </div>
             </div>
 
             <div class="col">
-                <div class="card bg-dark border-0 h-100 shadow-sm p-4">
+                <div class="card border-0 h-100 shadow-sm p-4">
                 <h5>🛸 Sim Drill: BLACKWALL BLAST</h5>
                 <p>MK-III test dummy exposed to multi-wave EMP + ballistic assault. HUD re-engagement achieved post-burst.</p>
-                <p class="text-muted small">System Recovery: 1.7s</p>
+                <p>System Recovery: 1.7s</p>
                 </div>
             </div>
 
