--- a/customsolutions.html
+++ b/customsolutions.html
@@ -116,22 +116,33 @@
         </nav>
     </section>
 
-    <!-- Hero Section -->
+    <!-- Custom Solutions Hero -->
     <section id="hero" class="text-center py-5">
         <div class="container">
             <img src="images/CustomSolutions_Logo_2500x500px.png" alt="Slabbion Logo" class="logo mb-4 glow-icon" />
+
             <h1 class="display-4 glow-yellow">
-            Tired of outdated websites and weak online presence?<br />
-            Choose <span class="text-warning">Slabbion</span> — your partner in digital growth!
+            Custom Digital Powerhouse
             </h1>
-            <p class="lead font-weight-bold">Web development, social media management, and graphic design to elevate your brand.
+
+            <p class="lead font-weight-bold">
+            Websites. Socials. Graphics. Slabbion brings your brand into the spotlight with sleek, smart, and strategic solutions.
             </p>
-            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-yellow">Unlock Custom Solutions</a>
+
+            <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s" style="color: #f1c40f;">
+            🚀 Tired of weak digital presence? Let's fix that — together.
+            </p>
+
+            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-yellow">
+            Unlock Custom Solutions
+            </a>
+
             <div class="stars mt-4">
             ★★★★★
             </div>
         </div>
     </section>
+
 
     <!-- Services Section -->
     <section class="container py-5">
