--- a/gamedevelopment.html
+++ b/gamedevelopment.html
@@ -185,15 +185,25 @@
     <section id="hero-hellfull" class="text-center py-5 position-relative overflow-hidden">
         <div class="container position-relative">
             <img src="images/HF_Library CapsuleV2 600px wide x 900px tall.png" alt="HellFull The Last Hope" class="logo mb-4" style="max-width:25%;">
+
             <h1 class="display-4 glow-red">
             HellFull – 5 Modes, One Epic Survival
             </h1>
+
             <p class="lead font-weight-bold">
             Single‑player. Multiplayer. HellMode wave combat. Slayer’s Course precision challenges. Open World coming soon!
             </p>
-            <a href="https://store.steampowered.com/app/1903130/HellFull__The_Last_Hope/" class="btn btn-light mt-3 feature-box">Early Access on Steam</a>
+
+            <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s" style="color: #b30000;">
+            🔥 No safe zones. No mercy. Just you… and Hell unleashed.
+            </p>
+
+            <a href="https://store.steampowered.com/app/1903130/HellFull__The_Last_Hope/" class="btn btn-light mt-3 feature-box glow-red">
+            Early Access on Steam
+            </a>
         </div>
     </section>
+
 
         <!-- IMAGE SCROLLER -->
     <section id="image-scroller">
