--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -118,17 +118,25 @@
         </nav>
     </section>
 
-    <!-- Hero Section -->
+    <!-- Graphic Design Hero Section -->
     <section id="hero" class="text-center py-5">
         <div class="container">
             <img src="images/GraphicDesign_Logo_2500x500px.png" alt="Slabbion Graphic Logo" class="logo">
+
             <h1 class="display-4 glow-cyan">Design That Commands Attention</h1>
+
             <p class="lead font-weight-bold">
             Elevate your brand with bold, high-impact visuals. From logos to full brand kits — Slabbion makes design unforgettable.
             </p>
+
+            <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s" style="color: #00bcd4;">
+            🎨 Identity is everything — let's make yours impossible to ignore.
+            </p>
+
             <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-cyan">Level Up My Brand</a>
         </div>
     </section>
+
 
     <!-- Graphic Design Section -->
     <section class="container py-5">
