--- a/vehicles.html
+++ b/vehicles.html
@@ -415,11 +415,11 @@
 
             <!-- Dune Buggy Log -->
             <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                <div class="card h-100 shadow-lg border-0 rounded-4">
                 <div class="card-body p-4">
                     <blockquote class="blockquote mb-4">
                     <p>"Chassis mounted. Reinforced roll cage bolted. Dual-shock suspension tuned for max articulation."</p>
-                    <footer class="blockquote-footer text-light">XR-9 Dune Buggy <cite class="text-muted">[09:12 UTC]</cite></footer>
+                    <footer class="blockquote-footer">XR-9 Dune Buggy <cite>[09:12 UTC]</cite></footer>
                     </blockquote>
                     <div class="text-warning">🧩 Status: Frame Assembly Complete</div>
                 </div>
@@ -428,11 +428,11 @@
 
             <!-- Motorbike Log -->
             <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                <div class="card h-100 shadow-lg border-0 rounded-4">
                 <div class="card-body p-4">
                     <blockquote class="blockquote mb-4">
                     <p>"Chain-to-axle tension aligned. Gyro stabilizers synced. E-grip sensors embedded into handlebars."</p>
-                    <footer class="blockquote-footer text-light">GravBike M7 <cite class="text-muted">[08:45 UTC]</cite></footer>
+                    <footer class="blockquote-footer">GravBike M7 <cite>[08:45 UTC]</cite></footer>
                     </blockquote>
                     <div class="text-warning">🏍️ Status: Rider Sync Calibrated</div>
                 </div>
@@ -441,11 +441,11 @@
 
             <!-- Zombie Vehicle Log -->
             <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4 bg-dark text-white">
+                <div class="card h-100 shadow-lg border-0 rounded-4">
                 <div class="card-body p-4">
                     <blockquote class="blockquote mb-4">
                     <p>"Barbed paneling welded. Spare fuel rigs installed. Blackout mode triggers verified."</p>
-                    <footer class="blockquote-footer text-light">ZB-01 "Reckoner" <cite class="text-muted">[10:21 UTC]</cite></footer>
+                    <footer class="blockquote-footer">ZB-01 "Reckoner" <cite>[10:21 UTC]</cite></footer>
                     </blockquote>
                     <div class="text-warning">🧟 Status: Urban Survival Mode Armed</div>
                 </div>
@@ -507,46 +507,46 @@
     </section>
 
     <!-- Engineering Workshop Feed -->
-    <section id="workshop-feed" class="py-5 bg-dark text-white">
+    <section id="armor-command" class="py-5 bg-black text-white">
         <div class="container">
             <h2 class="text-center mb-5 section-title glow-orange">🔧 Workshop Live Feed</h2>
             <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="border rounded p-4 shadow bg-black">
-                <p><strong>Live Assembly Log:</strong></p>
-                <pre class="bg-secondary p-3 rounded text-start text-black">
-        [10:00:22] XR-9 Buggy frame balance test complete.
-        [10:01:05] M7 Bike: chain tension adjusted + motor pulse test.
-        [10:02:44] Urban GT: onboard diagnostics all green.
-        [10:03:32] ZB-01: plate welding confirmed. Interior seals secured.
-                </pre>
+                <div class="col-lg-8">
+                    <div class="border rounded p-4 shadow">
+                        <p class="glow-violet"><strong>Ops Command Log:</strong></p>
+                        <pre class="bg-secondary p-3 rounded text-start glow-teal">
+            [10:00:22] XR-9 Buggy frame balance test complete.
+            [10:01:05] M7 Bike: chain tension adjusted + motor pulse test.
+            [10:02:44] Urban GT: onboard diagnostics all green.
+            [10:03:32] ZB-01: plate welding confirmed. Interior seals secured.
+                        </pre>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </section>
 
     <!-- Simulation Feed -->
-    <section id="simulation-feed" class="py-5 bg-black text-white">
+    <section id="simulation-feed" class="py-5">
         <div class="container">
-            <h2 class="text-center mb-5 section-title" style="color: #e67e22;">🎮 Simulation Records</h2>
+            <h2 class="text-center mb-5 section-title glow-orange">🎮 Simulation Records</h2>
             <div class="row row-cols-1 row-cols-md-2 g-4">
 
-            <div class="col">
-                <div class="card bg-dark border-0 h-100 shadow-sm p-4">
-                <h5>🌵 Sandstorm Chase</h5>
-                <p>Dune Buggy XR-9 tested in simulated desert ambush. Handled 45° drift at 120 km/h.</p>
-                <p class="text-muted small">Stability Rating: 93.2%</p>
+                <div class="col">
+                    <div class="card border-0 h-100 shadow-sm p-4">
+                    <h5>🌵 Sandstorm Chase</h5>
+                    <p>Dune Buggy XR-9 tested in simulated desert ambush. Handled 45° drift at 120 km/h.</p>
+                    <p>Stability Rating: 93.2%</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col">
-                <div class="card bg-dark border-0 h-100 shadow-sm p-4">
-                <h5>🧟 Zombie Escape Drill</h5>
-                <p>ZB-01 "Reckoner" escape scenario vs. 30 interceptors. Survived with 82% armor integrity.</p>
-                <p class="text-muted small">Escape Time: 3m 47s</p>
+                <div class="col">
+                    <div class="card border-0 h-100 shadow-sm p-4">
+                    <h5>🧟 Zombie Escape Drill</h5>
+                    <p>ZB-01 "Reckoner" escape scenario vs. 30 interceptors. Survived with 82% armor integrity.</p>
+                    <p>Escape Time: 3m 47s</p>
+                    </div>
                 </div>
-            </div>
 
             </div>
         </div>
