--- a/contact.html
+++ b/contact.html
@@ -128,11 +128,18 @@
         </nav>
     </section>
 
-    <!-- Hero Section -->
+    <!-- Contact Us Hero -->
     <section id="hero" class="text-center py-5">
         <div class="container">
-            <img src="images/ContactUs_Logo_2500x500px.png" alt="Slabbion Logo" class="logo">
-            <h1 class="display-5 fw-bold glow-gray">Slabbion is ready to deliver excellence.</h1>
+            <img src="images/ContactUs_Logo_2500x500px.png" alt="Slabbion Contact Logo" class="logo mb-4" />
+
+            <h1 class="display-5 fw-bold glow-gray">
+            Slabbion is ready to deliver excellence.
+            </h1>
+
+            <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s" style="color: #aaa;">
+            📩 Let’s build something that leaves a mark — reach out today.
+            </p>
         </div>
     </section>
 
