--- a/drones.html
+++ b/drones.html
@@ -647,7 +647,7 @@
     </section>
 
     <!-- Live Operations Panel -->
-    <section id="live-ops" class="py-5">
+    <section id="live-ops" class="py-5 bg-black text-white">
         <div class="container">
             <h2 class="text-center mb-5 section-title glow-violet">📡 Command Interface</h2>
             <div class="row justify-content-center">
