--- a/socialmedia.html
+++ b/socialmedia.html
@@ -119,15 +119,27 @@
         </nav>
     </section>
 
-    <!-- Hero Section -->
+    <!-- Social Media Hero Section -->
     <section id="hero" class="text-center py-5">
         <div class="container">
-            <img src="images/SocialMedia_Logo_2500x500px.png" alt="Slabbion Logo" class="logo">
-            <h5 class="display-4 glow-green">Our Services</h1>
-            <p class="lead font-weight-bold">Slabbion empowers you through tailored digital solutions — from modern web development to content-driven social media strategy and standout design.</p>
+            <img src="images/SocialMedia_Logo_2500x500px.png" alt="Slabbion Social Media Logo" class="logo">
+
+            <h1 class="display-4 glow-green">
+            Influence with Precision. Engage with Power.
+            </h1>
+
+            <p class="lead font-weight-bold">
+            Slabbion amplifies your voice through data-backed strategy, aesthetic storytelling, and algorithm-savvy campaigns.
+            </p>
+
+            <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s" style="color: #28a745;">
+            📱 From posts to partnerships — your brand deserves impact, not just presence.
+            </p>
+
             <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-green">Let’s Build Together</a>
         </div>
     </section>
+
 
     <!-- Social Media Management Packages Section -->
     <section id="social-packages" class="py-5 bg-dark text-white">
