--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -119,15 +119,27 @@
         </nav>
     </section>
 
-    <!-- Hero Section -->
+    <!-- Web Development Hero Section -->
     <section id="hero" class="text-center py-5">
         <div class="container">
-            <img src="images/WebDev_Logo_2500x500px.png" alt="Slabbion Logo" class="logo">
-            <h1 class="display-4 glow-blue">Your vision deserves more! Let’s build something eternal.</h1>
-            <p class="lead font-weight-bold">At Slabbion, we craft blazing-fast, secure, and visually striking websites with purpose, strategy, and divine excellence.</p>
+            <img src="images/WebDev_Logo_2500x500px.png" alt="Slabbion Web Dev Logo" class="logo">
+
+            <h1 class="display-4 glow-blue">
+            Your vision deserves more! Let’s build something eternal.
+            </h1>
+
+            <p class="lead font-weight-bold">
+            At Slabbion, we craft blazing-fast, secure, and visually striking websites with purpose, strategy, and divine excellence.
+            </p>
+
+            <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s" style="color: #5e17eb;">
+            💻 Every pixel we place is a promise — performance, power, and perfection.
+            </p>
+
             <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-blue">Bring My Vision to Life</a>
         </div>
     </section>
+
 
 
    <!-- Web Development Section -->
